--- a/src/Components/RightMenu/RightMenu.scss
+++ b/src/Components/RightMenu/RightMenu.scss
@@ -6,6 +6,9 @@
     height: 100vh;
     width: 95px;
     position: fixed;
+    li{
+        list-style: none;
+    }
     .rightMenu_ListItem{
         width: 40px;
         height: 40px;
