--- a/src/Components/MainMenu/Home.scss
+++ b/src/Components/MainMenu/Home.scss
@@ -55,72 +55,16 @@
             }
         }
     }
-    .my_services{
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        .my_services-head{
-            font-family: Inter;
-            font-style: normal;
-            font-weight: bold;
-            font-size: 32px;
-            line-height: 123.6%;
-            text-transform: capitalize;
-            color: #2B2B2B;
-            margin-bottom: 25px;
-        }
-        .my_services-paragraph{
-            font-family: Inter;
-            font-style: normal;
-            font-weight: 500;
-            font-size: 15px;
-            line-height: 24px;
-            text-align: center;
-            text-transform: capitalize;
-            color: #767676;
-            width: 440px;
-            margin-bottom: 50px;
-        }
-        .services_list{
+    .partners{
+        .partners_item{
             display: flex;
             align-items: center;
             justify-content: center;
-            flex-wrap: wrap;
-            margin-bottom: 70px;
-            .services_list-item{
-                display: flex;
-                width: 30%;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                background-color: white;
-                margin: 10px;
-                padding: 25px;
-                text-decoration: none;
-                img{
-                    margin-bottom: 25px;
-                }
-                h4{
-                    font-family: Inter;
-                    font-style: normal;
-                    font-weight: 500;
-                    font-size: 18px;
-                    line-height: 123.6%;
-                    text-transform: capitalize;
-                    color: #2B2B2B;
-                }
-                p{
-                    font-family: Inter;
-                    font-style: normal;
-                    font-weight: 500;
-                    font-size: 15px;
-                    line-height: 24px;
-                    text-align: center;
-                    text-transform: capitalize;
-                    color: #767676;
-                }
+            margin-left: 50px;
+            img{
+                filter: saturate(0);
             }
         }
     }
-
+  
 }
