--- a/src/Components/MainMenu/Home.scss
+++ b/src/Components/MainMenu/Home.scss
@@ -56,6 +56,7 @@
         }
     }
     .partners{
+        margin-bottom: 40px;
         .partners_item{
             display: flex;
             align-items: center;
